--- a/css/tablegrid-selet.css
+++ b/css/tablegrid-selet.css
@@ -2,55 +2,55 @@
  * @form-element tablegrid-selet.css
  */
 
-.cocoon-media-management-add-media-form table thead th:first-child {
+#cocoon-media-management-external table thead th:first-child {
   display: none;
 }
 
-.cocoon-media-management-add-media-form table tbody {
+#cocoon-media-management-external table tbody {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
 
-.cocoon-media-management-add-media-form table tbody tr {
+#cocoon-media-management-external table tbody tr {
   display: flex;
-  border-bottom: none;
-    width: 20%;
+  border: none;
+  width: 20%;
   padding: 0;
 }
 
 @media (max-width: 1300px) {
-  .cocoon-media-management-add-media-form table tbody tr {
+  #cocoon-media-management-external table tbody tr {
     width: 25%;
   }
 }
 
 @media (max-width: 1024px) {
-  .cocoon-media-management-add-media-form table tbody tr {
+  #cocoon-media-management-external table tbody tr {
     width: 33.3%;
   }
 }
 
 @media (max-width: 940px) {
-  .cocoon-media-management-add-media-form table tbody tr {
+  #cocoon-media-management-external table tbody tr {
     width: 50%;
   }
 }
 
 @media (max-width: 600px) {
-  .cocoon-media-management-add-media-form table tbody tr {
+  #cocoon-media-management-external table tbody tr {
     width: 100%;
   }
 }
 
-.cocoon-media-management-add-media-form table tbody tr td {
+#cocoon-media-management-external table tbody tr td {
   width: 100%;
 }
 
-.cocoon-media-management-add-media-form table tbody tr td:first-child {
+#cocoon-media-management-external table tbody tr td:first-child {
   position: absolute;
   padding: 0;
-  margin: 12px 14px;
+  margin: 22px 12px;
   width: 50px;
   height: 50px;
   z-index: 1;
@@ -60,7 +60,7 @@
   box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.3);
 }
 
-.cocoon-media-management-add-media-form table tbody tr td:first-child div {
+#cocoon-media-management-external table tbody tr td:first-child div {
   width: 100%;
   height: 100%;
   display: flex;
@@ -68,17 +68,17 @@
   justify-content: center;
 }
 
-.cocoon-media-management-add-media-form table tbody tr td input[type="checkbox"]
-, .cocoon-media-management-add-media-form table tbody tr td input[type="radio"] {
+#cocoon-media-management-external table tbody tr td input[type="checkbox"]
+, #cocoon-media-management-external table tbody tr td input[type="radio"] {
   min-width: 20px;
   min-height: 20px;
 }
 
-.cocoon-media-management-add-media-form table tbody tr td input[type="checkbox"]:checked
-, .cocoon-media-management-add-media-form table tbody tr td input[type="radio"]:checked {
+#cocoon-media-management-external table tbody tr td input[type="checkbox"]:checked
+, #cocoon-media-management-external table tbody tr td input[type="radio"]:checked {
 }
 
-.cocoon-media-management-add-media-form table tbody tr .media-thumb {
+#cocoon-media-management-external table tbody tr .media-thumb {
   width: 100%;
   height: 150px;
   background-size: contain;
@@ -86,11 +86,11 @@
   background-position: center center;
 }
 
-.cocoon-media-management-add-media-form table tbody tr .media-title {
+#cocoon-media-management-external table tbody tr .media-title {
   height: 4em;
   word-break: break-all;
 }
 
-.cocoon-media-management-add-media-form table tbody tr fieldset {
+#cocoon-media-management-external table tbody tr fieldset {
   padding: 15px;
 }
