--- a/css/tablegrid-selet.css
+++ b/css/tablegrid-selet.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
+  min-height: 100px;
 }
 
 .cocoon-media-management-add-media-form table tbody tr {
